--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Update README
+name: Update README - NEW
 
 on:
   schedule:
@@ -27,4 +27,4 @@ jobs:
           git config --global user.email 'andrew.grizhenkov@bjss.com'
           git add .
           git commit -am "Update README with top contributors" || exit 0
-          git push https://${{ secrets.GHPAT }}@github.com/cyplau/git-repo-insights.git
+          git push https://${{ secrets.GHPAT }}@github.com:AndrewGrizhenkov/hackathon-24.git
