--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,31 @@
-name: Update README - NEW
+# name: Update README - NEW
 
-on:
-  schedule:
-    - cron: '0 0 * * *' # Runs every day at 00:00 UTC
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+# on:
+#   schedule:
+#     - cron: '0 0 * * *' # Runs every day at 00:00 UTC
+#   push:
+#     branches:
+#       - main
+#   workflow_dispatch:
 
-jobs:
-  update-readme:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18' 
-      - name: Install dependencies
-        run: npm install axios
-      - name: Update README
-        run: node .github/scripts/update-readme.js
-      - name: Commit and push changes
-        run: |
-          git config --global user.name 'AndrewGrizhenkov'
-          git config --global user.email 'andrew.grizhenkov@bjss.com'
-          git add .
-          git commit -am "Update README with top contributors" || exit 0
-          git push https://${{ secrets.GHPAT }}@github.com/AndrewGrizhenkov/hackathon-24.git
+# jobs:
+#   update-readme:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Check out repository
+#         uses: actions/checkout@v2
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: '18' 
+#       - name: Install dependencies
+#         run: npm install axios
+#       - name: Update README
+#         run: node .github/scripts/update-readme.js
+#       - name: Commit and push changes
+#         run: |
+#           git config --global user.name 'AndrewGrizhenkov'
+#           git config --global user.email 'andrew.grizhenkov@bjss.com'
+#           git add .
+#           git commit -am "Update README with top contributors" || exit 0
+#           git push https://${{ secrets.GHPAT }}@github.com/AndrewGrizhenkov/hackathon-24.git
