--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,4 @@ jobs:
           git add README.md
           git commit -am "Update README with top contributors" || exit 0
           git push https://${{ secrets.GHPAT }}@github.com/AndrewGrizhenkov/hackathon-24.git
+          if: github.ref == 'refs/heads/main' # Execute only for the 'main' branch
