--- a/.github/workflows/pythonscripts.yml
+++ b/.github/workflows/pythonscripts.yml
@@ -33,6 +33,9 @@ jobs:
         env:
           YOUR_TOKEN: ${{ secrets.GHPAT }}
 
+      - name: build ocs
+        run: npm i && npm run build:docs
+
       - name: Commit and push changes
         run: |
           git config --global user.name 'AndrewGrizhenkov'
