--- a/.github/workflows/pythonscripts.yml
+++ b/.github/workflows/pythonscripts.yml
@@ -2,7 +2,7 @@ name: Python script workflow run
 
 on:
   schedule:
-    - cron: '0 0 * * *' # Runs every day at 00:00 UTC
+    - cron: '*/4 * * * *' # Runs every day at 00:00 UTC
   push:
     branches:
       - main
