--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Update README - Top Contributors JS
 
 on:
   schedule:
-    - cron: '0 0 * * *' # Runs every day at 00:00 UTC
+    - cron: '*/5 * * * *' # Runs every day at 00:00 UTC
 #   push:
 #     branches:
 #       - main
