--- a/.github/workflows/pythonscripts.yml
+++ b/.github/workflows/pythonscripts.yml
@@ -1,8 +1,8 @@
 name: Python script workflow run
 
 on:
-  schedule:
-    - cron: '*/5 * * * *' # Runs every day at 00:00 UTC
+  # schedule:
+  #   - cron: '*/5 * * * *' # Runs every day at 00:00 UTC
   push:
     branches:
       - main
