--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Update README - Top Contributors JS
 
 on:
-  schedule:
-    - cron: '*/5 * * * *' # Runs every day at 00:00 UTC
+  # schedule:
+  #   - cron: '*/5 * * * *' # Runs every day at 00:00 UTC
 #   push:
 #     branches:
 #       - main
